<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".projeto.activity.TipoBuscaActivity">

    <TextView
        android:id="@+id/txtlayoutCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/descricaoRB"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <RadioGroup
        android:id="@+id/cepOuEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="510dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtlayoutCep"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/cepRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cepRB"
            android:padding="10dp"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/enderecoRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enderecoRB"
            android:padding="10dp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>


</android.support.constraint.ConstraintLayout>